Fixed problem with caching of password reset state in user management.